@@ -1,6 +1,7 @@
 2021-04-09  Dirk Eddelbuettel  <edd@debian.org>
 
-	* inst/include/Rcpp/hash/IndexHash.h: Silence one comparison
+	* inst/include/Rcpp/hash/IndexHash.h: Silence one comparison, update
+	use of unsigned it to uint32_t throughout
 
 2021-03-22  Dirk Eddelbuettel  <edd@debian.org>
 
